--- a/.github/workflows/pr-check.yaml
+++ b/.github/workflows/pr-check.yaml
@@ -16,8 +16,16 @@ jobs:
         env:
           PR_BODY: ${{ github.event.pull_request.body }}
         run: |
+          set -x
           REQUIRED_SECTIONS=("Summary" "Changes" "Issue Link")
+          MISSING_SECTIONS=()
+          for SECTION in "${REQUIRED_SECTIONS[@]}"; do
+            if [[ ! "$PR_BODY" =~ $SECTION ]]; then
+              MISSING_SECTIONS+=("$SECTION")
+            fi
+          done
           MISSING_SECTIONS_ARR_LENGTH=0
+
           for _ in "${MISSING_SECTIONS[@]}"; do
             ((MISSING_SECTIONS_ARR_LENGTH++))
           done
@@ -27,6 +35,16 @@ jobs:
             exit 1
           fi
  
+          # MISSING_SECTIONS=()
+          # for SECTION in "${REQUIRED_SECTIONS[@]}"; do
+          #   if [[ ! "$PR_BODY" =~ $SECTION ]]; then
+          #     MISSING_SECTIONS+=("$SECTION")
+          #   fi
+          # done
+          # if [ ${#MISSING_SECTIONS[@]} -ne 0 ]; then
+          #   echo "❌ ERROR: PR must include the required sections: ${MISSING_SECTIONS[*]}"
+          #   exit 1
+          # fi
       - name: Check JIRA Ticket
         env:
           PR_BODY: ${{ github.event.pull_request.body }}
